--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,82 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Convenios colectivos
+description: Convenios colectivos de Mahou S.A
 template: splash
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid, LinkButton } from '@astrojs/starlight/components';
 
-## Next steps
+## Documentos disponibles
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Reglamento de régimen interior">
+		<LinkButton href="/convenios/reglamento" variant="secondary">Ver documento</LinkButton>
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Convenio colectivo 2024 - 2028">
+		<LinkButton href="/convenios/convenio-2024-2028" variant="secondary">Ver documento</LinkButton>
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="Convenio colectivo 2019 - 2023">
+  Próximamente
+  </Card>
+  <Card title="Convenio colectivo 2013 - 2018">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 2009 - 2012">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 2005 - 2008">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 2003 - 2004">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 2001 - 2002">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1999 - 2000">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1997 - 1998">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1996">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1994 - 1995">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1992 - 1993">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1990">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1988 - 1989">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1986 - 1987">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1985">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1984">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1983">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1982">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1981">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1980">
+    Próximamente
+  </Card>
+  <Card title="Convenio colectivo 1979">
+    Próximamente
+  </Card>
 </CardGrid>
+
