--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,82 +1,41 @@
 ---
-title: Convenios colectivos
+title: Convenios colectivos de Mahou S.A
 description: Convenios colectivos de Mahou S.A
-template: splash
+tableOfContents: false
+sidebar:
+  hidden: true
+
 ---
 
-import { Card, CardGrid, LinkButton } from '@astrojs/starlight/components';
+Consulta todos los acuerdos laborales vigentes para proteger tus derechos y garantizar condiciones justas en tu entorno de trabajo.
 
-## Documentos disponibles
+---
 
-<CardGrid stagger>
-	<Card title="Reglamento de régimen interior">
-		<LinkButton href="/convenios/reglamento" variant="secondary">Ver documento</LinkButton>
-	</Card>
-	<Card title="Convenio colectivo 2024 - 2028">
-		<LinkButton href="/convenios/convenio-2024-2028" variant="secondary">Ver documento</LinkButton>
-	</Card>
-  <Card title="Convenio colectivo 2019 - 2023">
-  Próximamente
-  </Card>
-  <Card title="Convenio colectivo 2013 - 2018">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 2009 - 2012">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 2005 - 2008">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 2003 - 2004">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 2001 - 2002">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1999 - 2000">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1997 - 1998">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1996">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1994 - 1995">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1992 - 1993">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1990">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1988 - 1989">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1986 - 1987">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1985">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1984">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1983">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1982">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1981">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1980">
-    Próximamente
-  </Card>
-  <Card title="Convenio colectivo 1979">
-    Próximamente
-  </Card>
-</CardGrid>
+### Introducción
+En este sitio encontrarás todos los convenios colectivos actualizados de Mahou S.A. Comisiones Obreras pone a disposición este recurso para que los empleados puedan acceder de manera rápida y sencilla a los documentos que regulan sus derechos y obligaciones laborales. Nuestro compromiso es garantizar que tengas toda la información necesaria para ejercer tus derechos en el entorno de trabajo.
+
+---
+
+### Beneficios de consultar los convenios
+- **Acceso rápido y sencillo:** Encuentra fácilmente el convenio colectivo que te corresponde.
+- **Información actualizada:** Nos aseguramos de tener los convenios más recientes disponibles.
+- **Derechos garantizados:** Consulta los términos y condiciones que protegen tus derechos laborales.
+- **Transparencia:** Conoce en detalle los acuerdos alcanzados entre los representantes de los trabajadores y la empresa.
+
+---
+
+### ¿Por qué es importante conocer tu convenio colectivo?
+Los convenios colectivos son la base que regula aspectos clave como el salario, los horarios, las vacaciones y las condiciones de seguridad en el trabajo. Al conocer estos detalles, te aseguras de que tus derechos estén protegidos y puedes tomar decisiones informadas sobre tu situación laboral.
+
+---
+
+### Acceso rápido a los convenios
+Selecciona tu área de trabajo o convenio específico para ver los detalles. Haz clic en las secciones que te interesen para obtener más información.
+
+---
+
+### Contacto y Asistencia
+Si tienes alguna duda o necesitas más información, Comisiones Obreras está a tu disposición. Ponte en contacto con nosotros para cualquier consulta relacionada con los convenios o tu situación laboral.
+
+
 
