--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,7 +4,7 @@ description: Convenios colectivos de Mahou S.A
 tableOfContents: false
 sidebar:
   hidden: true
-
+pagefind: false
 ---
 
 Consulta todos los acuerdos laborales vigentes para proteger tus derechos y garantizar condiciones justas en tu entorno de trabajo.
