--- a/src/content/i18n/es.json
+++ b/src/content/i18n/es.json
@@ -2,7 +2,7 @@
   "skipLink.label": "Saltearse al contenido",
   "search.label": "Buscar",
   "search.ctrlKey": "Ctrl",
-  "search.cancelLabel": "Interrumpir",
+  "search.cancelLabel": "Cancelar",
   "search.devWarning": "La búsqueda solo está disponible en las versiones de producción.  \nIntenta construir y previsualizar el sitio para probarlo localmente.",
   "themeSelect.accessibleLabel": "Seleccionar tema",
   "themeSelect.dark": "Oscuro",
