--- a/src/content/docs/convenios/reglamento.mdx
+++ b/src/content/docs/convenios/reglamento.mdx
@@ -10,49 +10,48 @@ description: Reglamento de régimen interior de Mahou S.A
 Depósito Legal, M. 26.202.-1974
 A.G.E.S.A.-Rodríguez San Pedro, 40.-MADRID-15
 
-## CAPITULO PRIMERO
+## Capítulo Primero
 ### Objeto y ámbito de aplicación
 
-#### Artículo 1.º Objeto.
-EI presente Reglamento de Régimen Interior tiene por objeto adecuar las normas laborales obligatorias en vigor, a las características peculiares de la Empresa, a fin de obtener conjuntamente los máximos resultados económicos y las mejores relaciones humanas, afianzando el sentido de comunidad laboral en la Empresa y asegurando la buena marcha de ésta y el mantenimiento de relaciones de lealtad y asistencia recíprocas que se deben cuantos participan en la producción.
+#### Artículo 1. Objeto
+El presente Reglamento de Régimen Interior tiene por objeto adecuar las normas laborales obligatorias en vigor, a las características peculiares de la Empresa, a fin de obtener conjuntamente los máximos resultados económicos y las mejores relaciones humanas, afianzando el sentido de comunidad laboral en la Empresa y asegurando la buena marcha de ésta y el mantenimiento de relaciones de lealtad y asistencia recíprocas que se deben cuantos participan en la producción.
 
-#### Art. 2.º Ambito territorial.
-EI presente Reglamento será de aplicación en todos los centros de trabajo que MAHOU, S. A., tiene en la actualidad o pueda tener en el futuro dentro de la provincia de Madrid. En el caso de establecer algún centro de trabajo fuera de esta provincia, se solicitará de la Dirección General de Ordenación del Trabajo la oportuna autorización para aplicar este Reglamento a los mismos.
+#### Artículo 2. Ámbito territorial
+El presente Reglamento será de aplicación en todos los centros de trabajo que MAHOU, S. A., tiene en la actualidad o pueda tener en el futuro dentro de la provincia de Madrid. En el caso de establecer algún centro de trabajo fuera de esta provincia, se solicitará de la Dirección General de Ordenación del Trabajo la oportuna autorización para aplicar este Reglamento a los mismos.
 
-#### Art. 3.º Ambito personal.
+#### Artículo 3. Ámbito personal
 Los preceptos de este Reglamento afectarán a todo el personal que presta sus servicios en MAHOU, S. A., mediante contrato de trabajo verbal o escrito, quedando excluido el personal que desempeñe funciones de alta Dirección, alto Gobierno o alto Consejo, así como los facultativos libres y los profesionales requeridos para trabajos limitados o especiales.
+
 Se considerarán incluidos en esta excepción los siguientes cargos: Director General, Subdirector General, Secretario General, Interventor General y cualquier otro que, al ser creado, sea investido de las funciones aludidas en el párrafo anterior.
+
 Si la persona elegida para cualquiera de estos cargos pertenecientes a uno de los escalafones de la Empresa, continuará figurando en éste, con la indicación de «en puesto directivo», hasta su cese en este puesto, en que volverá a la situación activa en el escalafón, quedando en suspenso la aplicación del Reglamento desde su nombramiento para alguno de aquellos cargos hasta su cese.
 
-#### Art. 4.º Ambito temporal.
+#### Artículo 4. Ámbito temporal
 Las normas de este Reglamento empezarán a regir a partir de la fecha en que sea firme la resolución aprobatoria de la autoridad laboral y se dé conocimiento de la misma a la representación de los trabajadores de la Empresa.
-Transcurridos dos años desde su aprobación, podrá ser modificado por decisión de la Dirección General de la Empresa o a instancias de los vocales del Jurado, y aún antes de este plazo, si se produjera cambios importantes en el volumen económico de la Empresa, en su estructura u organización técnica o racionalización del trabajo, o por modificación de la Ordenanza Laboral o del Convenio Colectivo.
 
-## CAPITULO II
+Transcurridos dos años desde su aprobación, podrá ser modificado por decisión de la Dirección General de la Empresa o a instancias de los vocales del Jurado. Aún antes de este plazo, podrá modificarse si se produjeran cambios importantes en el volumen económico de la Empresa, en su estructura u organización técnica o racionalización del trabajo, o por modificación de la Ordenanza Laboral o del Convenio Colectivo.
+
+## Capítulo II
 ### Organización de la empresa
 
-#### Art. 5.º
+#### Artículo 5. Objeto
 Las actividades de MAHOU, S. A., tienen por objeto la fabricación, venta y distribución de cerveza, malta y levadura de cerveza.
 
-#### Art. 6.º
-
-##### Principios generales de organización:
-
+#### Artículo 6. Principios generales de organización
 1) Corresponde a la Dirección de la empresa, como atributo exclusivo de la misma, la organización técnica y práctica del trabajo, pudiendo establecer los sistemas de valoración, racionalización, mecanización y división del mismo que, sin perjudicar la formación profesional de sus productores, permitan el mayor y mejor aprovechamiento de sus condiciones personales y laborales, como medio de proporcionarles mayor y mejor retribución y facilitar su perfeccionamiento profesional.
 
-2) La señalada facultad alcanza: A la exigencia de los rendimientos mínimos que puedan establecerse, utilizando para su determinación los sistemas de valoración y medida del trabajo adoptados internacionalmente y adaptados a las peculiaridades de la industria Cervecera; a la adjudicación de cometidos; a la movilidad y redistribución del personal, con arreglo a las necesidades de la organización y producción.
+2) La señalada facultad alcanza: A la exigencia de los rendimientos mínimos que puedan establecerse, utilizando para su determinación los sistemas de valoración y medida del trabajo adoptados internacionalmente y adaptados a las peculiaridades de la industria cervecera; a la adjudicación de cometidos; a la movilidad y redistribución del personal, con arreglo a las necesidades de la organización y producción.
 
-#### Art. 7.º
+#### Artículo 7. Dirección
 MAHOU, S. A., está dirigida por la Junta General de Accionistas y los Directores Generales, así como por los Apoderados que éstos designen.
 
-#### Art. 8.º
-Para el mejor cumplimiento de sus fines la organización de MAHOU, S. A., estará integrada por los siguientes Departamentos: Técnico, Comercial, Administrativo y de Personal. A continuación se describen las principales actividades enmarcadas en cada uno de ellos.
+#### Artículo 8. Departamentos de la empresa
+Para el mejor cumplimiento de sus fines, la organización de MAHOU, S. A., estará integrada por los siguientes departamentos: Técnico, Comercial, Administrativo y de Personal. A continuación se describen las principales actividades enmarcadas en cada uno de ellos.
 
-1. **Departamento Técnico.**
-Se hallan encuadrados en él todas las actividades relativas a la elaboración de los productos fabricados por la Empresa, desde la Selección de materias primas hasta que los productos terminados son situados sobre el muelle de la fábrica para su expedición. Entre sus principales actividades figuran las siguientes:
+1. **Departamento Técnico**.- Se hallan encuadradas en él todas las actividades relativas a la elaboración de los productos fabricados por la Empresa, desde la selección de materias primas hasta que los productos terminados son situados sobre el muelle de la fábrica para su expedición. Entre sus principales actividades figuran las siguientes:
 - Control de calidad, tanto de materias primas como de los productos terminados.
 - Desarrollo total del proceso de fabricación de cada producto.
-- Mantenimiento de los edificios, maquinaria e instalaciones, así como el estudio y ejecución de los proyectos de reforma y nueva instalación de los mismos.
+- Mantenimiento de los edificios, maquinaria e instalaciones.
 - Control y responsabilidad de las existencias de embalajes y envases y del lugar en que se encuentran almacenados, dentro del ciclo comprendido desde su recepción en los muelles de fábrica, entregados por los suministradores o por los repartidores, distribuidores o concesionarios, hasta que se entreguen nuevamente a dichos repartidores y concesionarios.
 
 2. **Departamento Comercial.**
