--- a/src/content/docs/convenios/convenio-1982.mdx
+++ b/src/content/docs/convenios/convenio-1982.mdx
@@ -57,7 +57,7 @@ Asimismo, corresponderá a la Empresa el derecho de solicitar la revisión del C
 ## CAPITULO II
 ### CONDICIONES ECONÓMICAS
 
-#### Artículo 6.0 Bases de Cotización para Seguros Sociales, Desempleo, Mutualidad y Formación Profesional.
+#### Artículo 6. Bases de Cotización para Seguros Sociales, Desempleo, Mutualidad y Formación Profesional.
 
 De conformidad con lo establecido en la Ley 24/1972, de 21 de junio, en el Decreto 527/1973, de 29 de marzo, y en la Orden Ministerial de 5 de abril de 1973, la cotización a la Seguridad Social se ajustará a los conceptos y con las limitaciones que las disposiciones anteriormente citadas establecen, o con las modificaciones que puedan establecerse en lo sucesivo, teniendo en cuenta, a efectos de determinación del grupo de tarifa que corresponde a cada categoría profesional, las siguientes asimilaciones:
 
