--- a/src/content/docs/convenios/convenio-1979.mdx
+++ b/src/content/docs/convenios/convenio-1979.mdx
@@ -16,7 +16,7 @@ import anexo3 from '../../../assets/tables/convenio-1979/anexo-3.jpg'
 
 ---
 
-## CAPITULO I
+## CAPÍTULO I
 ### DISPOSICIONES GENERALES
 #### ARTÍCULO 1.- Ámbito territorial, funcional y personal.
 
@@ -46,7 +46,7 @@ La Representación Social podrá pedir la revisión del Convenio si, por disposi
 
 Asímismo, corresponderá a la Empresa el derecho de solicitar la revisión del Convenio antes de que expire su término, si el coste total del personal y Seguros Sociales resultara incrementado en un 10 por 100 como consecuencia de mejoras implantadas con carácter obligatorio o por modificación de las cuotas o de las bases de la Seguridad Social, Mutualismo, Desempleo, Formación Profesional.
 
-## CAPITULO II
+## CAPÍTULO II
 ### CONDICIONES ECONÓMICAS
 #### ARTÍCULO 7.- Bases de Cotización para Seguros Sociales, Desempleo, Mutualidad y Formación Profesional.
 
@@ -246,7 +246,7 @@ Se establece, en todos los casos anteriormente descritos excepto en la salida e 
 
 5º - Los Inspectores comerciales (de venta y reparto), en tanto estén adscritos a estos servicios, quedarán excluidos del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta, con las que, entre otros conceptos, se compensan, las posibles prolongaciones de jornada que puedan producirse.
 
-## CAPITULO III
+## CAPÍTULO III
 ### DISPOSICIONES VARIAS
 #### ARTÍCULO 25.
 Para ingresar en la Empresa como trabajador fijo, será necesario, cumplir los requisitos tipificados en la legislación vigente al respecto y, además, los siguientes:
