--- a/src/content/docs/convenios/convenio-1980.mdx
+++ b/src/content/docs/convenios/convenio-1980.mdx
@@ -18,7 +18,7 @@ AÑO 1980
 
 ---
 
-## CAPITULO I
+## CAPÍTULO I
 ### DISPOSICIONES GENERALES
 #### Artículo 1. Ámbito territorial, funcional y personal.
 
@@ -53,7 +53,7 @@ La Representación Social podrá pedir la revisión del Convenio si, por disposi
 
 Asimismo, corresponderá a la Empresa el derecho de solicitar la revisión del Convenio antes de que expire su término, si el coste total del personal y Seguros Sociales resultara incrementado en un 10 por 100 como consecuencia de mejoras implantadas con carácter obligatorio o por modificación de las cuotas o de las bases de la Seguridad Social, Mutualismo, Desempleo, Formación Profesional.
 
-## CAPITULO II
+## CAPÍTULO II
 ### CONDICIONES ECONOMICAS
 
 #### Artículo 6.-Bases de Cotización para Seguros Sociales, Desempleo, Mutualidad y Formación Profesional.
