--- a/src/content/docs/convenios/convenio-1981.mdx
+++ b/src/content/docs/convenios/convenio-1981.mdx
@@ -287,7 +287,7 @@ Si por absentismo no se realizase la mitad de la jornada completa pactada, este 
 
 Como los incrementos salariales pactados dan lugar a un incremento en los costos del personal, su incidencia en los precios repercutirá en la forma y cuantía que autoricen las normas vigentes en la materia.
 
-## CAPITULO III
+## CAPÍTULO III
 ### DISPOSICIONES VARIAS
 
 #### Artículo 26.
