--- a/src/content/docs/convenios/convenio-1983.mdx
+++ b/src/content/docs/convenios/convenio-1983.mdx
@@ -502,7 +502,7 @@ Como es costumbre en la Empresa, el Servicio Médico facilitará a cada trabajad
 
 El Comité de Seguridad e Higiene interesará la práctica de reconocimientos médicos a los trabajadores de la Empresa, conforme a lo dispuesto en las Disposiciones vigentes.
 
-## CAPITULO V
+## CAPÍTULO V
 #### Artículo 50. Reclamaciones del personal.
 
 Cualquier reclamación o queja del personal, respecto de su situación, deberá ser planteado en la vía jerárquica correspondiente dentro de cada departamento y tan sólo cuando haya transcurrido un plazo de quince días sin que, agotada en sus distintos escalones dicha vía, haya obtenido contestación o la contestación recibida no sea favorable, podrá reclamar a la Dirección de Personal, para que ésta tramite ante la Dirección General la misma, que deberá ser resuelta en un plazo máximo de quince días, debiendo recaer forzosamente resolución, aunque sea negativa.
