--- a/src/content/docs/convenios/convenio-1982.mdx
+++ b/src/content/docs/convenios/convenio-1982.mdx
@@ -54,7 +54,7 @@ La Representación Social podrá pedir la revisión del Convenio si, por disposi
 
 Asimismo, corresponderá a la Empresa el derecho de solicitar la revisión del Convenio antes de que expire su término, si el coste total del personal y Seguros Sociales resultara incrementado en un 10 por 100 como consecuencia de mejoras implantadas con carácter obligatorio o por modificación de las cuotas o de las bases de la Seguridad Social, Mutualismo, Desempleo, Formación Profesional.
 
-## CAPITULO II
+## CAPÍTULO II
 ### CONDICIONES ECONÓMICAS
 
 #### Artículo 6. Bases de Cotización para Seguros Sociales, Desempleo, Mutualidad y Formación Profesional.
@@ -278,7 +278,7 @@ Si por absentismo no se realizase la mitad de la jornada completa pactada, este 
 
 Como los incrementos salariales pactados dan lugar a un incremento en los costos del personal, su incidencia en los precios repercutirá en la forma y cuantía que autoricen las normas vigentes en la materia.
 
-## CAPITULO III
+## CAPÍTULO III
 ### DISPOSICIONES DISPOSICIONES VARIAS
 
 #### Artículo 26.
@@ -442,7 +442,7 @@ La Empresa efectuará las gestiones oportunas a fin de producir la renovación d
 
 El personal de Caja, que hasta la fecha viene disfrutándolo, percibirá mensualmente en concepto de quebranto de moneda la cantidad de 1.000 pesetas.
 
-## CAPITULO IV
+## CAPÍTULO IV
 ### SEGURIDAD E HIGIENE
 
 #### Artículo 45.
@@ -488,7 +488,7 @@ Dichos reconocimientos constarán de las siguientes pruebas:
 
 Como es costumbre en la Empresa, el Servicio Médico facilitará a cada trabajador el resultado de dicho reconocimiento.
 
-## CAPITULO V
+## CAPÍTULO V
 
 #### Artículo 49. Garantías sindicales.
 
