--- a/src/content/docs/convenios/convenio-1988-1989.mdx
+++ b/src/content/docs/convenios/convenio-1988-1989.mdx
@@ -72,16 +72,16 @@ Respecto a las materias que comprende este enunciado, y en relación con las nor
 Las modificaciones posteriores que pudieran producirse por necesidades imperiosas del proceso de producción o por causas de fuerza mayor se someterán a la autoridad laboral.
 2. Cada turno de trabajo, tendrá una duración de ocho horas de trabajo efectivo y continuado.
 3. El personal sujeto a turnos, en tanto esté adscrito a la jornada de ocho horas de trabajo efectivo y continuado, devengará un complemento por compensación de los cuarenta y cinco minutos del tiempo de comida, que se abonará por jornada trabajada en turno de ocho horas efectivas y continuadas y será aplicable a las categorías y con las cuantías que figuran en las tablas que se adjuntan como anexo número 3.
-Dicho complemento se tipifica como un complemento por cantidad de trabajo cuya denominación será «Complemento de Trabajo Efectivo y Continuado»&gt;.
+Dicho complemento se tipifica como un complemento por cantidad de trabajo cuya denominación será «Complemento de Trabajo Efectivo y Continuado».
 Este complemento se percibirá por días efectivos trabajados. Si, por absentismo, no se realizase la mitad de la jornada completa pactada, no se percibirá dicho complemento, siendo la jornada de 40 horas semanales.
 El personal de reparto que esté pendiente de traslado por incapacidad cobrará el complemento de trabajo efectivo y continuado.
 4. Los horarios para los distintos turnos, se empalmarán de tal forma que entre los mismos no existan tiempos muertos y quede, en cualquier caso, garantizado el relevo.
 5. Los turnos de trabajo serán comunicados con tiempo suficiente a los trabajadores y como máximo el jueves de cada semana.
 6. Cualquier trabajador podrá cambiar su turno con otro compañero de su misma categoría y sección, autorizando, dicho cambio, su inmediato superior.
-7. Siendo, en todo caso, los horarios de trabajo, descritos anteriormente, de trabajo efectivo y continuado, a efectos de control de puntualidad para todo el personal, éste fichará la entrada al puesto de trabajo a la hora en punto en los relojes de control de su sección, y la salida del mismo no antes de 5 minutos (5 m.) de la hora de finalización, quedando, en todos los casos, garantizado el relevo.
+7. Siendo, en todo caso, los horarios de trabajo, descritos anteriormente, de trabajo efectivo y continuado, a efectos de control de puntualidad para todo el personal, este fichará la entrada al puesto de trabajo a la hora en punto en los relojes de control de su sección, y la salida del mismo no antes de 5 minutos (5 m.) de la hora de finalización, quedando, en todos los casos, garantizado el relevo.
 8. Se establece, en todos los casos anteriormente descritos, una tolerancia máxima de puntualidad de treinta minutos (30 m.) mes, permitiéndose hasta dos faltas de puntualidad al mes de diez minutos (10 m.) y sancionándose toda falta superior o igual a quince minutos (15 m.).
 
-9. Asimismo, la Empresa entregará las listas de personal de mantenimiento en las distintas secciones de fábrica en que éstas existan, indicando sus turnos, horarios, libranzas, etc.
+9. Asimismo, la Empresa entregará las listas de personal de mantenimiento en las distintas secciones de fábrica en que estas existan, indicando sus turnos, horarios, libranzas, etc.
 
 #### Artículo 8. Exclusiones del régimen de la jornada normal de trabajo:
 
@@ -142,7 +142,7 @@ En lo referente al número de horas extraordinarias a realizar, se estará a lo 
 La Dirección de la Empresa redactará el escalafón del personal a su servicio, con separación de los grupos que lo integren, teniendo en cuenta, para la colocación en el mismo, los siguientes extremos:
 1. Grupo Laboral.
 2. Categoría profesional.
-3. Orden de antigüedad en la categoria.
+3. Orden de antigüedad en la categoría.
 4. Orden de puntuación, en su caso, en el examen de ascenso.
 5. Antigüedad en la categoría inmediata inferior.
 6. Antigüedad en el grupo laboral.
@@ -416,7 +416,7 @@ Una vez producido el ingreso del nuevo personal, el Comité de Empresa será inf
 Todos los contratos de trabajo se efectuarán de conformidad con la Legislación vigente y los modelos-tipo de contrato se remitirán al Comité de Empresa.
 
 #### Artículo 42. Ascensos y pruebas de aptitud.
-La Empresa desarrollará la política de formación y promoción adecuada, en orden a la mejora del nivel cultural y profesional de sus empleados, según las nece sidades administrativas, comerciales, organizativas y de fabricación que se den en cada momento.
+La Empresa desarrollará la política de formación y promoción adecuada, en orden a la mejora del nivel cultural y profesional de sus empleados, según las necesidades administrativas, comerciales, organizativas y de fabricación que se den en cada momento.
 
 Como consecuencia de lo anterior, la Empresa convocará y celebrará, en los tres meses anteriores a las pruebas de aptitud, cursos de formación profesional teórico-prácticos. Durante los mismos se desarrollarán las enseñanzas que figuren en el plan del curso. La Enseñanza correrá a cargo del personal de la Empresa que designe la Gerencia por su capacitación, según la materia de que se trate.
 
@@ -560,7 +560,7 @@ Las funciones de la Comisión Mixta de Interpretación son:
 5. Otras actividades que ayuden a la eficacia práctica del Convenio.
 
 
-### REPRESENTACION DE LOS TRABAJADORES
+### REPRESENTACIÓN DE LOS TRABAJADORES
 
 D. Eusebio García García.
 
@@ -582,7 +582,7 @@ D. Francisco Gómez Villarejo.
 
 D. Marcelino González Marta.
 
-### REPRESENTACION DE LA EMPRESA
+### REPRESENTACIÓN DE LA EMPRESA
 
 D. Luis Fernando Rubio y Canal.
 
@@ -610,7 +610,7 @@ La Empresa garantiza la percepción de los haberes el día 26 de cada mes; caso 
 El salario del personal de limpieza se equipara al de Auxiliar de 1ª Obrero, sin que ello cree derecho alguno a ascenso por antigüedad.
 
 #### Cuarta.
-El personal de reparto, que esté en control disponible para el servicio, percibirá las primas de venta que devengue el repartidor que le haya sustituido, si, por absentismo, realiza, al menos, la mitad de la jornada.
+El personal de reparto, que esté en control disponible para el servicio, percibirá las primas de venta que devengue el repartidor que le haya sustituido, sí, por absentismo, realiza, al menos, la mitad de la jornada.
 
 #### Quinta.
 El personal de Reparto que esté en situación de rotación mensual, percibirá los mismos complementos que el personal de fábrica, sin estar sujeto al régimen de primas.
@@ -618,7 +618,7 @@ El personal de Reparto que esté en situación de rotación mensual, percibirá 
 ## ANEXO NUM. 1
 ### AL CONVENIO COLECTIVO DE «MAHOU, S. A.»
 **Bases que regulan la concesión de los beneficios de mejora de las pensiones de jubilación y viudedad**
-#### JUBILACION
+#### JUBILACIÓN
 
 El sistema que se ha elegido, es un sistema mixto, ni de reparto ni de capitalización, es decir, no se ajusta a las recomendaciones del proyecto de reglamento que desarrollará la Ley de fondo de pensiones, y presenta, por otra parte, dificultades al no constituir reserva alguna financiera para las jubilaciones de la plantilla activa (la que está actualmente trabajando), ya que sólo se dotará el fondo para el personal que se jubile a partir del 31-12-86.
 
@@ -631,7 +631,7 @@ Para acogerse a los beneficios que se reglamentan con las presentes bases, es ne
 2.1.-Pertenecer a la plantilla de la Empresa, con un mínimo de diez años ininterrumpidos.
 
 2.2. Solicitar la jubilación voluntaria para el mismo día en que se cumplan los sesenta y cinco años de edad, con treinta días de antelación, como mínimo.
-Lo indicado en los apartados 2.1. y 2.2., será de aplicación cuando el trabajador opte por la jubilación anticipada, a partir de los 60 años.
+Lo indicado en los apartados 2.1 y 2.2, será de aplicación cuando el trabajador opte por la jubilación anticipada, a partir de los 60 años.
 
 2.3.-Solicitar, igualmente, la pensión de jubilación a la Seguridad Social, así como el subsidio de vejez, si tuviera derecho. 2.4.-Jubilarse en la fecha solicitada.
 
@@ -641,13 +641,13 @@ Los beneficios que se conceden, son exclusivamente de naturaleza económica y se
 ##### Base 4.
 Tabla de jubilación ordinaria con el % que ha de alcanzar el complemento sobre las tablas que figuran en el Anexo número 2.
 
-| Años de servicio | % |
-| --- | --- |
-|Treinta años o más | 100% |
-| Veinticinco a veintinueve años | 95% |
-| Veinte a veinticuatro años | 85% |
-| Quince a diecinueve años | 75% |
-| Diez a catorce años | 60% |
+| Años de servicio               | %    |
+|--------------------------------|------|
+| Treinta años o más             | 100% |
+| Veinticinco a veintinueve años | 95%  |
+| Veinte a veinticuatro años     | 85%  |
+| Quince a diecinueve años       | 75%  |
+| Diez a catorce años            | 60%  |
 
 A los trabajadores mayores de 60 años que opten por la jubilación anticipada, se les aplicará la antigüedad que tendrían si tuviesen 65 años cumplidos en dicho momento.
 
