--- a/src/content/docs/convenios/convenio-1986-1987.mdx
+++ b/src/content/docs/convenios/convenio-1986-1987.mdx
@@ -601,12 +601,12 @@ La Empresa garantiza la percepción de los haberes el día 26 de cada mes; caso 
 #### Tercera.
 El salario del personal de limpieza se equipara al de Auxiliar de 1ª Obrero, sin que ello cree derecho alguno a ascenso por antigüedad.
 
-## ANEXO N.° 2
+## Tabla Salarial
 
 <Image src={anexo2_1} alt="Anexo 2" />
 <Image src={anexo2_2} alt="Anexo 2" />
 
-## ANEXO N.° 3
+## Complementos
 
 <Image src={anexo3} alt="Anexo 3" />
 
